syntax = "proto3";


package registerPackage;


service registerService {
    rpc register (registerRequest) returns (registerResponse);
};

message registerRequest {
    string name = 1;
    string email = 2;
    string ipAddress = 3;
    string password = 4;
};

message registerResponse {
    bool saved = 1;
};