syntax = "proto3";

package forgotPasswordPackage;

service forgotPasswordService {
    rpc forgotPassword (forgotPasswordRequest) returns (forgotPasswordResponse);
};


message forgotPasswordREquest {
    string hashedPassword = 1;
    string email = 2;
};

message forgotPasswordResponse {
    bool changed = 1;
}